<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Cedric App</string>
    <string name="password">Password</string>
    <string name="today">Today</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_error">Please enter an email address</string>
    <string name="username_error">Full Name</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="password_error">Please enter  password</string>
    <string name="error_weak_password">Your  password is  too weak</string>
    <string name="error_match_password">Password did not match</string>
    <string name="Age_error">Please enter your age</string>
    <string name="height_error">Please enter your height</string>
    <string name="weight_error">Please enter your weight</string>
    <string name="sleep_visualization">Sleep Visualization</string>
    <string name="carbs">Carbs</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="choose_one">Choose One</string>
    <string name="username_valid_error">Please enter Valid Full Name</string>
    <string name="invalid_weight">Please enter weight greater then 30Kg and less than 400Kg</string>
    <string name="invalid_age">Please enter age greater then 12 and less than 90</string>
    <string name="invalid_height">Please enter height between 3 to 8 feet</string>
    <string name="invalid_height_cm">Please enter height between 100 to 272 cm</string>
    <string name="full_name">Please enter Full Name</string>
    <string name="error_cpassword">Please confirm your password</string>
    <string name="invalid_height_ft">Please enter valid height in feet and inches</string>
    <string name="msg_token_fmt" translatable="false">token_string</string>
    <string name="nav_home">Home</string>
    <string name="nav_programs">Programs</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_shopping_list">Shopping List</string>
    <string name="nav_setting">Settings</string>
    <string name="error_password"><![CDATA[Min 8 characters, 1 Upper&Lowercase, 1 special character]]></string>
    <string name="hyperlink">By creating an account, I accept the Cedric\'s  <a href="https://cedric.montagesvets.se/policy.html">Terms and conditions</a>.</string>
    <string name="hyperlink1">By continuing,You  agree to our \n<a href="https://cedric.montagesvets.se/policy.html"><b>Terms and conditions</b></a>.</string>
    <string name="invalid_weight_Metric">Please enter weight greater then 66.1 lb and less than 881.8 lb</string>
    <string name="email_reset_error">Enter your email to reset password via OTP verification</string>
    <string name="splash_title" tools:ignore="MissingTranslation">Cedric</string>
    <string name="login_message">Please Login to continue</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log in</string>
    <string name="or">OR</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="good_morning">Good Morning</string>
    <string name="back" translatable="false">Back</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_debit">Credit/Debit</string>
    <string name="proceed">Proceed</string>
    <string name="amount">Amount</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="next">Next</string>
    <string name="what_s_your_current_n_fitness_level">What\'s your current \n Fitness Level?</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="reset_password">Reset Password</string>
    <string name="check_email_you_will_get_the_otp_code">Check email you will get the OTP Code</string>
    <string name="reset">Reset</string>
    <string name="what_s_your_goal">What\'s your Goal?</string>
    <string name="lose_weight">Get leaner and improve your fitness</string>
    <string name="get_leaner_and_improve_your_fitness">Get leaner and improve Your fitness</string>
    <string name="information">Information</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="start_7_days_free_trial">Start 7-days free Trial</string>
    <string name="choose_subscription">Choose Subscription</string>
    <string name="your_first_7_days_are_free">Your first 7-days are free</string>
    <string name="no_charges_until_your_7_day_trial_ends_ncancel_anytime">No charges until your 7-day trial ends.\nCancel anytime.</string>
    <string name="existing_user">Existing User</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="email_verification">Email Verification</string>
    <string name="_00">00</string>
    <string name="resend_otp">Resend OTP </string>
    <string name="please_enter_the_otp_code_sent_to_your_email">Please enter the OTP code sent to your email</string>
    <string name="verify">Verify</string>
    <string name="banana_peanut_butter_n_super_smoothie">Banana Peanut butter \n Super Smoothie</string>
    <string name="shoulder_rotation">Shoulder Rotation</string>
    <string name="_00_30" translatable="false">00:30</string>
    <string name="breakfast">Breakfast</string>
    <string name="exercise">Exercise</string>
    <string name="fried_chicken">Fried Chicken</string>
    <string name="dinner">Dinner</string>
    <string name="yoga">Yoga</string>
    <string name="medium">Medium</string>
    <string name="classical_yoga">Classical Yoga</string>
    <string name="_3_mins" translatable="false">3 Mins</string>
    <string name="timer" translatable="false">Timer</string>
    <string name="camera">Camera</string>
    <string name="_40_videos" translatable="false">40 Videos</string>
    <string name="tbiceps_workout" translatable="false">\tBiceps Workout</string>
    <string name="time" translatable="false">Time</string>
    <string name="_15_mins" translatable="false">15 mins</string>
    <string name="dumble" translatable="false">Dumble</string>
    <string name="none">None</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum_dummy_data" translatable="false">Lorem ipsum, or lipsum as it is sometimes known,is dummy text used in laying out print, graphic or web designs.The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts</string>
    <string name="next_workout">Next Workout</string>
    <string name="bobby_s_plyometric_moves_will_help_you_nbuild_the_power_of_fly_like_a_hero" translatable="false">Bobby\'s Plyometric moves will help you \nbuild the power of fly like a hero</string>
    <string name="warm_up" translatable="false">Warm up</string>
    <string name="workout">Workout</string>
    <string name="coaches">Coaches</string>
    <string name="hello">Hello</string>
    <string name="explore" translatable="false">Explore</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="recommended_for_you" translatable="false">Recommended for you</string>
    <string name="popular_meals" translatable="false">Popular Meals</string>
    <string name="featured_on_demand" translatable="false">Featured on Demand</string>
    <string name="instructor" translatable="false">Instructor</string>
    <string name="feedback">Feedback</string>
    <string name="your_opinion_is_important_to_us_this_way_we_n_can_keep_improving_our_app">Your opinion is important to us.This way we\n can keep improving our app .</string>
    <string name="your_overall_satisfaction_of_the_app">Your overall satisfaction of the app</string>
    <string name="_1" translatable="false">1</string>
    <string name="please_select_the_category_below">Please Select the Category below</string>
    <string name="please_choose_one">Please choose one</string>
    <string name="submit">Submit</string>
    <string name="back_arrow" translatable="false">Back Arrow</string>
    <string name="filters" translatable="false">Filters</string>
    <string name="workouts" translatable="false">Workouts</string>
    <string name="meal" translatable="false">Meal</string>
    <string name="prep">PREP:</string>
    <string name="cook">Cook:</string>
    <string name="method">Method</string>
    <string name="ingredients">Ingredients</string>
    <string name="quantity">Quantity</string>
    <string name="fats">Fats</string>
    <string name="kcal">Kcal</string>
    <string name="proteins">Proteins</string>
    <string name="add_to_shopping_list">Add to shopping List</string>
    <string name="cart" translatable="false">CART</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="shopping_list">Shopping List</string>
    <string name="shopping_list_is_empty_nplease_add_nutrition_s_to_shopping_list">Shopping List is Empty…\nPlease add nutrition to shopping list</string>
    <string name="increment_button" translatable="false">Increment Button</string>
    <string name="decrement_button" translatable="false">Decrement Button</string>
    <string name="ingredient">Ingredient</string>
    <string name="name">Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="upload_your_profile_image">Upload your profile image</string>
    <string name="uploading">Uploading…</string>
    <string name="back_online">Back Online</string>
    <string name="nutrition">Nutrition</string>
    <string name="setting">Setting</string>
    <string name="level">Level</string>
    <string name="progress">Progress</string>
    <string name="best_programs">Best Programs</string>
    <string name="programs">Programs</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="program_image" translatable="false">Program Image</string>
    <string name="testing">Testing</string>
    <string name="staging">Staging</string>
    <string name="you_have_already_logged_in_on_another_device">You have already Logged in on another device!</string>
    <string name="do_you_want_to_logout_from_n_that_device">Do you want to logout from \n that device?</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="timer_dialog">1:59:00</string>
    <string name="beta">Beta</string>
    <string name="production">Production</string>
    <string name="alert_dialog_text">Alert</string>
    <string name="subscription_expiration_date">The Subscription expiration date is </string>
    <string name="unsubscribe_package_text">Are you sure to unsubscribe  the Package?</string>
    <string name="pause_for_min_days">5 Days</string>
    <string name="pause_for_med_days">10 Days</string>
    <string name="pause_for_max_days">20 Days</string>
    <string name="dialog_text_pause_subscription">Are you sure to Pause Subscription?</string>
    <string name="testing_beta">Testing Beta</string>
    <string name="delete_checkBox_text">\tI confirm, I want to permanently delete my account.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete_account">Yes,Delete my Account</string>
    <string name="delete_account_description">Deleting your Cedrics account is a \tpermanent action and cannot be undone. \n\nAfter you delete your account, you will not be able to log back in to the app, and any food preferences and goals and application you created and saved your dashboard will be removed from our database permanently and cannot be restored.</string>
    <string name="delete_account_textView">Delete Account</string>
    <string name="sureity_delete_account">Are you sure want to permanently delete your account?</string>
</resources>