<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/custom_dialog_style1"
    android:minWidth="330dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/round_top_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/ic_aert_icon"
            android:contentDescription="@string/app_name"
            android:visibility="visible"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/alertMTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_text"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_extrabold"
            android:textSize="16sp"/>

    </LinearLayout>

    <!--<com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_spacing"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="@dimen/medium_spacing"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:text="@string/subscription_expiration_date"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="visible"
        app:fontFamily="@font/montserrat_regular" />-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_spacing"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/medium_spacing"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/dialog_text_pause_subscription"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioBtn_pause_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_for_min_days"
            android:fontFamily="@font/montserrat_semibold"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioBtn_pause_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/pause_for_med_days" />

        <RadioButton
            android:id="@+id/radioBtn_pause_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/pause_for_max_days" />

    </RadioGroup>

    <!--<TextView
        android:id="@+id/dialog_Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/timer_dialog"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="16sp" />-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/grey_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/btn_no"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/btn_yes"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <!--     android:background="@color/selected_bg"-->

    </LinearLayout>


</LinearLayout>